--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     <div class="row">
       <a href="" id="preview">View all posts</a>
     </div>
-    <script src="/index-script.js"></script>
+    <script src="index-script.js"></script>
   </body>
 </html>
