--- a/preview-post.html
+++ b/preview-post.html
@@ -16,7 +16,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -35,6 +35,6 @@
       </form>
     </div>
     <div class="container preview-posts"></div>
-    <script src="preview-script.js"></script>
+    <script src="/preview-script.js"></script>
   </body>
 </html>
