--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
 
   <body>
@@ -68,6 +68,6 @@
     <div class="row">
       <a href="" id="preview">View all posts</a>
     </div>
-    <script src="index-script.js"></script>
+    <script src="/index-script.js"></script>
   </body>
 </html>
